apps/prittstift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prittstift
  labels:
    app: prittstift
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prittstift
  template:
    metadata:
      labels:
        app: prittstift
    spec:
      containers:
        - name: labello
          image: telegnom/labello:v0.2.0
          livenessProbe:
            httpGet:
              path: /
              port: web
          resources:
            limits:
              memory: 128M
            requests:
              cpu: 100m
              memory: 128M
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: fonts
              mountPath: /opt/labello/fonts
      volumes:
        - name: fonts
          persistentVolumeClaim:
            claimName: fonts
