apps/prittstift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prittstift
spec:
  selector:
    app: prittstift
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
