apps/prittstift/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prittstift
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: prittstift.chaosdorf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prittstift
                port:
                  name: web
  tls:
    - secretName: ingress-tls
      hosts:
        - prittstift.chaosdorf.space
